fix overflow

--- a/stylise.css
+++ b/stylise.css
@@ -29,7 +29,7 @@ article {
     top: 0;
     display: inline-block;
     height: calc(100% - 130px);
-    overflow:hidden;
+    overflow: auto;
     background-color: #100806;
 }
 
@@ -51,14 +51,14 @@ header a {
 
 body {
     margin: 0;
-    overflow:hidden;
+    overflow: hidden;
 }
-
 
 article table {
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
 }
+
 article table td {
     color: white;
 }
@@ -67,7 +67,7 @@ article table tr:nth-child(1) {
     background-color: white;
 }
 
-footer{
+footer {
     background-color: #fff;
-    text-align:right;
+    text-align: right;
 }
